--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,80 +1,71 @@
+<!-- INICIO -->
+<div id='apresentacao'>
 
-    <!-- INICIO -->
-    <div id='apresentacao'>
-
-        <div id='divTitulo'>
-            <h1>MARVEL <span>API</span></h1>
-            <p>Conheça os quadrinhos e heróis da API da Marvel!</p>
-        </div>
-        <img src="img/wallpaperflare.com_wallpaper.jpg" alt="fundo_Marvel">
-
+    <div id='divTitulo'>
+        <h1>MARVEL <span>API</span></h1>
+        <p>Conheça os quadrinhos e heróis da API da Marvel!</p>
     </div>
+    <img src="img/wallpaperflare.com_wallpaper.jpg" alt="fundo_Marvel">
 
-    
-    <!-- Heróis -->
-    <h2 id='characters'>PESQUISAR PERSONAGEM</h2>
+</div>
 
-    <form class='menuSearch'>
 
-        <input class="cursor inputPesquisa " type="text " ng-model="heroi.nome " placeholder="Faça sua Busca " required>
-        <button name="search " id="search " class="btn btn-danger btn-block btn-pesquisar " ng-click="pesquisarHeroi(heroi.nome)">PESQUISAR</button>
-        <button name="clear " id="clear " class="btn btn-warning btn-block btn-limpar " ng-click="limparInput(heroi)">LIMPAR</button>
-        <label class=" " id="naoEncontrado " ng-hide="naoEncontrado">Ops, herói não Encontrado</label
-            class="elementToFadeInAndOut ">
-        <i class="fas fa-search fa-1x "></i>
+<!-- Heróis -->
+<h2 id='characters'>PESQUISAR PERSONAGEM</h2>
 
-    </form>
+<form class='menuSearch'>
 
-    
-    <div id="cardMarvel" ng-model="heroiImg ">
+    <input class="cursor inputPesquisa " type="text " ng-model="heroi.nome " placeholder="Faça sua Busca " required>
+    <button name="search " id="search " class="btn btn-danger btn-block btn-pesquisar "
+        ng-click="pesquisarHeroi(heroi.nome)">PESQUISAR</button>
+    <button name="clear " id="clear " class="btn btn-warning btn-block btn-limpar "
+        ng-click="limparInput(heroi)">LIMPAR</button>
+    <label class=" " id="naoEncontrado " ng-hide="naoEncontrado">Ops, herói não Encontrado</label
+        class="elementToFadeInAndOut ">
+    <i class="fas fa-search fa-1x "></i>
 
-        <img id="imgHero" ng-if="heroiImg " ng-src="{{heroiImg}} " alt="Avatar ">
-        <div class="heroiName ">
-            <h4><b ng-bind="heroiName"> </b></h4>
-            <!-- <p ng-bind='heroiDesc'></p> -->
-        </div>
-        <div>
-            <!-- <button href="#quadrinhos " ng-if="heroiImg " name="search " id="search " class="btn btn-danger btn-block btnVerMais "
-                ng-click="pesquisarQuadrinhos(quadrinhos) ">VER MAIS</button> -->
-                <a href="#quadrinhos#">
-                    <button ng-if="heroiImg " name="search " id="search " class="btn btn-danger btn-block btnVerMais "
+</form>
+
+
+<div id="cardMarvel" ng-model="heroiImg ">
+
+    <img id="imgHero" ng-if="heroiImg " ng-src="{{heroiImg}} " alt="Avatar ">
+    <div class="heroiName ">
+        <h4><b ng-bind="heroiName"> </b></h4>
+    </div>
+    <div>
+        <a href="#quadrinhos#">
+            <button ng-if="heroiImg " name="search " id="search " class="btn btn-danger btn-block btnVerMais "
                 ng-click="pesquisarQuadrinhos(quadrinhos) ">VER MAIS</button>
-                </a>
-                <!-- <form style="display: inline " href="#apresentacao " method="get ">
-                    <button>Visit Website</button>
-                  </form> -->
-            </button>
-        </div>
-
-    </div>
-
-    
-    <!-- Quadrinhos -->
-    <div id='quadrinhos#' ng-if="mostrarLimparQuadrinhos">
-        <h2 id='quadrinhos'>DESCRIÇÃO E QUADRINHOS</h2>
-        <div class="descricaoHeroi ">
-            <p ng-bind='heroiDesc'></p>
-        </div>
-    </div>
-
-
-    <div ng-if='mostrarLimparQuadrinhos' class="father white ">
-        <div class="cardQuadrinho " id='quadrinhosVerMais' ng-repeat="quadrinho in quadrinhosInfo track by $index ">
-            <img id="quadrinhoImg" ng-if="quadrinhoImg " ng-src="{{ quadrinho.img }} " alt="Avatar ">
-            <div>
-                <h5 class="quadrinhoTitle "><b ng-bind="quadrinho.title "> </b></h5>
-                <!-- <p >{{quadrinho.name}}</p> -->
-            </div>
-        </div>
-
-    </div>
-
-    <div ng-if="mostrarLimparQuadrinhos" class="voltarInicio" >
-        <a href="#characters">
-            <button ng-if="heroiImg " name="search " id="search " class="btn btn-danger btn-block btn-voltar-inicio ">INICIO</button>
         </a>
+        </button>
     </div>
 
-    <!-- <footer id='meuFooter'>
-        <p>Carlos Eduardo </p>
-    </footer> -->
+</div>
+
+
+<!-- Quadrinhos -->
+<div id='quadrinhos#' ng-if="mostrarLimparQuadrinhos">
+    <h2 id='quadrinhos'>DESCRIÇÃO E QUADRINHOS</h2>
+    <div class="descricaoHeroi ">
+        <p ng-bind='heroiDesc'></p>
+    </div>
+</div>
+
+
+<div ng-if='mostrarLimparQuadrinhos' class="father white ">
+    <div class="cardQuadrinho " id='quadrinhosVerMais' ng-repeat="quadrinho in quadrinhosInfo track by $index ">
+        <img id="quadrinhoImg" ng-if="quadrinhoImg " ng-src="{{ quadrinho.img }} " alt="Avatar ">
+        <div>
+            <h5 class="quadrinhoTitle "><b ng-bind="quadrinho.title "> </b></h5>
+        </div>
+    </div>
+
+</div>
+
+<div ng-if="mostrarLimparQuadrinhos" class="voltarInicio">
+    <a href="#characters">
+        <button ng-if="heroiImg " name="search " id="search "
+            class="btn btn-danger btn-block btn-voltar-inicio ">INICIO</button>
+    </a>
+</div>
