--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,5 +1,5 @@
 <!-- Menu -->
-<header id='meuHeader'>
+<!-- <header id='meuHeader'>
     <div id='logo'>
         <img src="img/Marvel_Logo.svg.png" alt="marvel_Logo">
     </div>
@@ -11,4 +11,4 @@
     </ul>
     <i class="fas fa-times " id='botao-2'></i>
     <i class="fas fa-bars " id='botao'></i>
-</header>
+</header>  -->
