--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
     display: flex;
     margin: 10px;
     cursor: pointer;
+    margin-top: 14px;
 }
 
 #meuHeader a {
@@ -514,17 +515,26 @@ body::-webkit-scrollbar-thumb {
         bottom: 0;
     }
     #meuHeader {
-        height: 82px;
-        margin-bottom: -34px !important;
-        margin-top: -33px;
+        height: 109px ;
+        margin-bottom: -36px ;
+        margin-top: -2px ; 
         position: relative;
     }
     #logo {
         width: 20%;
         margin-left: 26px;
     }
-    #minhaUl {
+    .buttonMenu {
+        border-radius: 4px;
         font-size: 4.8rem !important;
+        background-color: #ebe4e48c; /* Green */
+        border: none;
+        color: rgba(255, 255, 255, 0.877);
+        padding: 0px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
     }
     #divTitulo {
         font-size: 28px;
