--- a/app/views/home.html
+++ b/app/views/home.html
@@ -66,6 +66,6 @@
 <div ng-if="mostrarLimparQuadrinhos" class="voltarInicio">
     <a href="#characters">
         <button ng-if="heroiImg " name="search " id="search "
-            class="btn btn-danger btn-block btn-voltar-inicio ">INICIO</button>
+            class="btn btn-warning btn-block btn-voltar-inicio ">voltar</button>
     </a>
 </div>
