--- a/app/views/home.html
+++ b/app/views/home.html
@@ -20,7 +20,7 @@
         ng-click="pesquisarHeroi(heroi.nome)">PESQUISAR</button>
     <button name="clear " id="clear " class="btn btn-warning btn-block btn-limpar "
         ng-click="limparInput(heroi)">LIMPAR</button>
-    <label class=" " id="naoEncontrado " ng-hide="naoEncontrado">Ops, herói não Encontrado</label
+    <label class=" " id="naoEncontrado" ng-hide="naoEncontrado">Ops, herói não encontrado.</label
         class="elementToFadeInAndOut ">
     <i class="fas fa-search fa-1x "></i>
 
