--- a/style.css
+++ b/style.css
@@ -500,6 +500,7 @@ body::-webkit-scrollbar-thumb {
         width: 705px;
     }
     .btnVerMais {
+        margin-bottom: 139px !important;
         font-size: 45px !important;
         width: 705px !important;
     }
@@ -512,7 +513,7 @@ body::-webkit-scrollbar-thumb {
     #meuFooter {
         height: 80px;
         position: fixed;
-        bottom: 0;
+        bottom: -10px;
         margin-bottom: 15px;
     }
     #meuHeader {
