--- a/app/views/informacoesDoHeroi.html
+++ b/app/views/informacoesDoHeroi.html
@@ -24,6 +24,6 @@
 </div>
 <div class="voltarInicio">
     <a href="#!herois">
-        <button name="search " id="search " class="btn btn-danger btn-block btn-voltar-inicio ">voltar</button>
+        <button name="search " id="search " class="btn btn-warning btn-block btn-voltar-inicio ">voltar</button>
     </a>
 </div>
