--- a/app/views/herois.html
+++ b/app/views/herois.html
@@ -10,7 +10,7 @@
         <div>
             <a ng-class="{'active': $ctrl.isActive('/ver-mais')}" href="#!/ver-mais">
 
-                <h5 class="quadrinhoTitle "><button class="btn btn-danger btn-block btn-pesquisar"
+                <h5 class="quadrinhoTitle "><button class="btn btn-danger btn-block btn-herois"
                         ng-bind="_listaHerois.name"
                         ng-click="pesquisarHeroi(_listaHerois.name); pesquisarQuadrinhos(_listaHerois.id)"> </button>
                 </h5>
