--- a/app/views/herois.html
+++ b/app/views/herois.html
@@ -1,6 +1,6 @@
 <!-- Quadrinhos -->
 <div id='quadrinhos#'>
-    <h2 id='quadrinhos'>HERÓIS</h2>
+    <h2 id='heroisTitulo'>HERÓIS</h2>
     <div class="descricaoHeroi ">
     </div>
 </div>
