--- a/style.css
+++ b/style.css
@@ -566,6 +566,10 @@ body::-webkit-scrollbar-thumb {
     #quadrinhos {
         font-size: 50px;
     }
+    #heroisTitulo {
+        margin-top: 81px;
+        font-size: 50px;
+    }
     .descricaoHeroi {
         width: 70%;
         text-align: left;
